# numcodecs-replace

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/numcodecs_replace/: __init__.py
tests/: test_replace.py
