[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numcodecs-replace"
version = "0.1.0"
description = "Value replacement codecs for the `numcodecs` buffer compression API"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.10"
dependencies = [
    "numcodecs>=0.13.0,<0.17",
    "numpy~=2.0",
    "typing-extensions~=4.6",
]

[dependency-groups]
dev = ["mypy~=1.14", "pytest~=8.3"]

[project.entry-points."numcodecs.codecs"]
"replace.filter" = "numcodecs_replace:ReplaceFilterCodec"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"numcodecs_replace" = ["py.typed"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
xfail_strict = true

[[tool.mypy.overrides]]
module = ["numcodecs.*"]
follow_untyped_imports = true
